@startuml component_diagram
title Component diagram: async command processor

skinparam componentStyle rectangle
skinparam packageStyle rectangle
skinparam shadowing false

actor "User / stdin" as User

package "app" {
    component "async_demo" as AsyncDemo
}

package "libasync.so" {
    component "async.h\npublic API" as AsyncApi
    component "AsyncContext" as AsyncContext
    component "CommandBlockProcessor" as Processor
    component "AsyncCommandBlockDispatcher" as Dispatcher
    component "AsyncQueue<CommandBlock>" as Queue
    component "ConsoleHandler" as ConsoleHandler
    component "FileHandler" as FileHandler
    component "Formatter" as Formatter
}

database "stdout" as Stdout
folder "bulk*.log" as LogFiles

User --> AsyncDemo : commands
AsyncDemo --> AsyncApi : connect()\nreceive()\ndisconnect()

AsyncApi --> AsyncContext : owns context by handle_t
AsyncContext --> Processor : feeds lines
Processor --> Dispatcher : emits CommandBlock

Dispatcher --> Queue : push blocks
Queue --> ConsoleHandler : log worker
Queue --> FileHandler : file workers

ConsoleHandler --> Formatter : format()
FileHandler --> Formatter : format()

ConsoleHandler --> Stdout : write
FileHandler --> LogFiles : write

note right of Dispatcher
Owns async output infrastructure:
- log queue
- file queue
- log thread
- file thread 1
- file thread 2
end note

@enduml


@startuml class_diagram
title Class diagram: libasync

skinparam classAttributeIconSize 0
skinparam shadowing false

namespace async {
    class "async.h API" as AsyncApi <<API>> {
        +connect(bulk: std::size_t): handle_t
        +receive(handle: handle_t, data: const char*, size: std::size_t): void
        +disconnect(handle: handle_t): void
    }
}

namespace bulk {
    class AsyncContext {
        +AsyncContext(block_size: std::size_t)
        +~AsyncContext()
        +receive(data: const char*, size: std::size_t): void
        +disconnect(): void
        --
        -dispatcher_: AsyncCommandBlockDispatcher
        -processor_: CommandBlockProcessor
        -receive_mutex_: std::mutex
        -input_buffer_: std::string
        -disconnected_: bool
    }

    interface ICommandBlockHandler {
        +handle(block: const CommandBlock&): void
    }

    class CommandBlockProcessor {
        +CommandBlockProcessor(block_size: std::size_t,\n handler: ICommandBlockHandler&)
        +processLine(line: std::string): void
        +finish(): void
    }

    class AsyncCommandBlockDispatcher {
        +AsyncCommandBlockDispatcher()
        +~AsyncCommandBlockDispatcher()
        +handle(block: const CommandBlock&): void
        +stop(): void
        --
        -log_queue_: AsyncQueue<CommandBlock>
        -file_queue_: AsyncQueue<CommandBlock>
        -log_thread_: std::thread
        -file_thread_1_: std::thread
        -file_thread_2_: std::thread
        -stop_mutex_: std::mutex
        -stopped_: bool
        --
        -logWorker(): void
        -fileWorker(): void
    }

    class "AsyncQueue<T>" as AsyncQueue {
        +push(value: T): void
        +pop(value: T&): bool
        +close(): void
        --
        -mux_: std::mutex
        -cv_: std::condition_variable
        -queue_: std::queue<T>
        -closed_: bool
    }

    class CommandBlock {
        +timestamp: std::time_t
        +commands: std::vector<std::string>
    }

    class ConsoleHandler {
        +handle(block: const CommandBlock&): void
    }

    class FileHandler {
        +handle(block: const CommandBlock&): void
    }

    class Formatter {
        +format(block: const CommandBlock&): std::string
        +write(output: std::ostream&, block: const CommandBlock&): void
    }
}

AsyncApi ..> AsyncContext : creates / owns by handle_t

AsyncContext *-- AsyncCommandBlockDispatcher : dispatcher_
AsyncContext *-- CommandBlockProcessor : processor_

CommandBlockProcessor --> ICommandBlockHandler : sends completed blocks
AsyncCommandBlockDispatcher ..|> ICommandBlockHandler

AsyncCommandBlockDispatcher *-- AsyncQueue : log_queue_
AsyncCommandBlockDispatcher *-- AsyncQueue : file_queue_
AsyncCommandBlockDispatcher --> ConsoleHandler : logWorker()
AsyncCommandBlockDispatcher --> FileHandler : fileWorker()

AsyncQueue o-- CommandBlock

ConsoleHandler ..> Formatter
FileHandler ..> Formatter

CommandBlockProcessor ..> CommandBlock
ICommandBlockHandler ..> CommandBlock

note right of AsyncContext
Responsible for:
- input buffering
- splitting receive() data into lines
- calling CommandBlockProcessor
- finalizing on disconnect()
end note

note right of AsyncCommandBlockDispatcher
Responsible for:
- async dispatching
- worker thread lifetime
- queues close
- join on stop()
end note

@enduml